--- a/main.css
+++ b/main.css
@@ -15,5 +15,5 @@ body {
    width: 40px;
    height: 40px;
    border-radius: 20px;
-   background-image: radial-gradient(1px at 20px 50% , rgba(255,153,0, 1), rgba(255,255, 0, 0.4), rgba(255, 255, 0, 0) 22px)
+   background-image: radial-gradient(1px at 20px 50% , rgba(255,153,0, 1), rgba(255,255, 0, 0.4), rgba(255, 255, 0, 0) 22px);
 }
